Fixed delete-entry button visibility and removing elements from DOM after deleting

--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,10 @@
   display: flex;
 }
 
+.visibility {
+  visibility: hidden;
+}
+
 .container {
   max-width: 575px;
   margin: 0 auto;
